--- a/SimpleDiscordNet/SimpleDiscordNet.csproj
+++ b/SimpleDiscordNet/SimpleDiscordNet.csproj
@@ -1,11 +1,12 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk">
-
     <PropertyGroup>
-    <TargetFramework>net10.0</TargetFramework>
-    <LangVersion>latestmajor</LangVersion>
-    <ImplicitUsings>enable</ImplicitUsings>
-    <Nullable>enable</Nullable>
-  </PropertyGroup>
+        <TargetFramework>net10.0</TargetFramework>
+        <LangVersion>latestmajor</LangVersion>
+        <ImplicitUsings>enable</ImplicitUsings>
+        <Nullable>enable</Nullable>
+        <AssemblyName>SimpleDiscordDotNet</AssemblyName>
+        <Version>1.0.1</Version>
+    </PropertyGroup>
   
   <!-- Exclude legacy attributes from compilation (replaced by DiscordContextAttribute) -->
   <ItemGroup>
@@ -13,6 +14,29 @@
     <Compile Remove="Attributes\DiscordChannelsAttribute.cs" />
     <Compile Remove="Attributes\DiscordMembersAttribute.cs" />
     <Compile Remove="Attributes\DiscordUsersAttribute.cs" />
+  </ItemGroup>
+
+  <!-- Generate a NuGet package when building in Release configuration -->
+  <PropertyGroup Condition="'$(Configuration)' == 'Release'">
+    <GeneratePackageOnBuild>true</GeneratePackageOnBuild>
+    <IsPackable>true</IsPackable>
+    <!-- Include license and readme metadata in the NuGet package -->
+    <PackageLicenseFile>LICENSE</PackageLicenseFile>
+    <PackageReadmeFile>README.md</PackageReadmeFile>
+  </PropertyGroup>
+
+  <!-- Ensure README and LICENSE from repo root are included at the package root -->
+  <ItemGroup>
+    <None Include="..\README.md" Pack="true" PackagePath="\" />
+    <None Include="..\LICENSE" Pack="true" PackagePath="\" />
+  </ItemGroup>
+
+  <!-- Bundle the Roslyn source generator into the NuGet under analyzers/dotnet/cs -->
+  <ItemGroup>
+    <ProjectReference Include="..\SimpleDiscordNet.Generators\SimpleDiscordNet.Generators.csproj"
+                      OutputItemType="Analyzer"
+                      ReferenceOutputAssembly="false"
+                      PrivateAssets="all" />
   </ItemGroup>
 
 </Project>
